# movies-api

./: .env.template  .gitignore  Makefile  README.md  config.py  dependencies.py  docker-compose.yml  init-elastic.sh  init-opensearch.sh  main.py  movies.json  opensearch.yml  pyproject.toml  settings.py
api/: __init__.py
api/v1/: __init__.py  movies.py
connections/: elastic.py  redis_manager.py  slack.py
constants/: index.py
models/: base.py  elastic.py
schemas/requests/: base.py  movies.py
schemas/responses/: base.py  movies.py
services/: base.py  movies.py
tests/: test_models_base.py  test_services_movies.py  test_utils_elastic_query.py  test_utils_logger.py  test_utils_string_utils.py
utils/: __init__.py  decorators.py  elastic_query.py  exceptions.py  logger.py  string_utils.py
